--- a/hw9doc.html
+++ b/hw9doc.html
@@ -8,15 +8,29 @@
 <body>
 <h1>Homework 9: GEE Analysis</h1>
 <h2>Trevor VanAuken</h2>
-<h3>filler
+<h2>GEE Code:</h2>
+<h3>
+    var Vis = {
+    min: 0,
+    max: 2000,
+  };
+  Map.setCenter(-83.235, 42.4073, 10);
+  
+  var clipped_raster = MichRivers.distance().clip(MetropolitanArea);
+  var colorp = ['#0571b0','#92c5de','#f7f7f7','#f4a582','#ca0020'];
+  //['#ca0020','#f4a582','#f7f7f7','#92c5de','#0571b0']
+  
+  Map.addLayer(MichRivers, Vis, 'Michigan Rivers');
+  Map.addLayer(clipped_raster, { min: 0,max: 4000, palette: colorp}, 'Clip' );
+  
 </h3>
 <!-- Your map goes here -->
-<a href="../HW9/DetroitRiverMap.png">
-    <img src="../HW9/DetroitRiverMap.png" alt="Detroit River Map" width='500px'>
+<a href="../HW9/DetroitRiverMap.PNG">
+    <img src="../HW9/DetroitRiverMap.PNG" alt="Detroit River Map" width='500px'>
     </a>
 
 <h2>Data</h2>
-    <a href="../HW9/MichRivers>.shp"> Rivers Shapefile </a>
+    <a href="../HW9/MichRivers.shp"> Rivers Shapefile </a>
     <p></p>
     <a href="../HW9/MetropolitanArea.shp"> Metropolitan shapefile </a>
 
