--- a/hw9doc.html
+++ b/hw9doc.html
@@ -9,9 +9,10 @@
 <h1>Homework 9: GEE Analysis</h1>
 <h2>Trevor VanAuken</h2>
 <h2>GEE Code:</h2>
-<h3>    var Vis = {<h3>
-<h3>    min: 0,</h3>
-<h3>    max: 2000,<h3>
+<h2>//Period in front is so the tab can show, is not in actual code.</h2>
+<h3>.    var Vis = {<h3>
+<h3>.    min: 0,</h3>
+<h3>.    max: 2000,<h3>
 <h3>};<h3>
 <h3>Map.setCenter(-83.235, 42.4073, 10);</h3>
 <h3> </h3>
