--- a/hw9doc.html
+++ b/hw9doc.html
@@ -10,7 +10,7 @@
 <h2>Trevor VanAuken</h2>
 <h2>GEE Code:</h2>
 <h2>//Period in front is so the tab can show, is not in actual code.</h2>
-<h3>.    var Vis = {<h3>
+<h3>var Vis = {<h3>
 <h3>.    min: 0,</h3>
 <h3>.    max: 2000,<h3>
 <h3>};<h3>
